--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
             </div>
         </div>
     </div>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </body>
 </html>
