--- a/page2.html
+++ b/page2.html
@@ -36,6 +36,6 @@
             <div id="frame3">dfasfafdafs</div>
         </div>
     </div>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </body>
 </html>
